# ollama-deep-researcher

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  test_newsletter.py
src/assistant/: base_research_graph.py  configuration.py  research_newsletter_runner.py  utils.py
src/assistant/common/: README.md  llm.py  prompts.py  search_tools.py  source_utils.py  state.py
src/assistant/deep_research/: graph.py  interface.py  models.py
src/assistant/newsletter/: __init__.py  graph.py  state.py
